plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'edu.mx.unsis'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

// Excluir globalmente las dependencias de logging conflictivas
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        // Excluimos el starter de logging por defecto de Spring Boot y Logback
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback'
        // Excluimos la implementación que adapta Log4j a SLF4J, si fuera necesario
        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Starter base con exclusiones (se mantienen las exclusiones por redundancia)
    implementation('org.springframework.boot:spring-boot-starter') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback'
    }

    // Starter web con exclusiones
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback'
    }

    // Se utiliza Log4j2 para el logging
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback'
    }
    implementation('org.springframework.boot:spring-boot-starter-security') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback'
    }
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0') {
    exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-xml'
    }
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Excluir también en las dependencias de test
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback'
    }
    testImplementation 'org.springframework.security:spring-security-test'

    implementation("org.flywaydb:flyway-core:8.5.13")
    implementation("org.flywaydb:flyway-mysql:8.5.13")

    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    
    // JasperReports dependencies - Versiones específicas y compatibles
    implementation 'net.sf.jasperreports:jasperreports:6.20.0'
    implementation 'com.lowagie:itext:2.1.7'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'commons-digester:commons-digester:2.1'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.codehaus.groovy:groovy-all:3.0.20'
    implementation 'org.apache.xmlgraphics:batik-bridge:1.16'
    implementation 'org.apache.xmlgraphics:batik-svggen:1.16'
    // Dependencias adicionales para resolver conflictos
    implementation('com.itextpdf:itext-asian:5.2.0')
    implementation('org.olap4j:olap4j:1.2.0')

    // Email
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}

bootBuildImage {
    imageName = 'unsismile-app'
}

tasks.named('test') {
    useJUnitPlatform()
}
